<resources>
    <string name="app_name">TICTACTOE</string>
    <string name="singlePlayerSettings">Single Player Settings</string>
    <string name="multiPlayerSettings">Multi Player Settings</string>
    <string name="singlePlayer">Single Player</string>
    <string name="multiPlayer">Multi Player</string>
    <string name="start">Start</string>
    <string name="chooseCircleOrCross">Choose Circle or Cross?</string>
    <string name="chooseDifficulty">Choose Difficulty level</string>
    <string name="difficultyLevel">Difficulty:          </string>
    <string name="crossPlayer">Cross Player Name</string>
    <string name="playerOne">Player 1</string>
    <string name="playerTwo">Player 2</string>
    <string name="whoseTurnFirst">Whose turn is first?</string>
    <string name="circlePlayer">Circle Player Name</string>
    <string name="circle">Circle</string>
    <string name="cross">Cross</string>
    <string name="HighScore">High Score</string>
    <string name="Other">Other</string>
    <string name="title_activity_gameplay_full">Tic-Tac-Toe</string>
    <string name="back_button">Pause</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="playAgain">Play Again</string>
    <string name="turnText">Turn</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>