<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity"
    android:background="#fff">


<!--    <TextView-->
<!--        android:id="@+id/txtgameTitle"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="100dp"-->
<!--        android:gravity="center_horizontal"-->
<!--        android:text="@string/app_name"-->
<!--        android:textSize="50sp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <Button
        android:id="@+id/btnSinglePlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="119dp"
        android:layout_marginEnd="46dp"
        android:layout_marginRight="46dp"
        android:fontFamily="monospace"
        android:text="@string/singlePlayer"
        android:textSize="30sp"
        app:cornerRadius="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnMultiPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="84dp"
        android:layout_marginRight="84dp"
        android:text="@string/multiPlayer"
        android:textSize="25sp"
        app:cornerRadius="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSinglePlayer" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/app_name"
        android:textColor="#673AB7"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--        <Button-->
<!--        android:id="@+id/btnother"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="50dp"-->
<!--        android:text="@string/Other"-->
<!--        android:textSize="40sp"-->
<!--        app:cornerRadius="20dp"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/btnhighscore"-->
<!--        app:layout_constraintStart_toStartOf="@+id/btnhighscore"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/btnhighscore" />-->

<!--    <Button-->
<!--        android:id="@+id/btnhighscore"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="80dp"-->
<!--        android:text="@string/HighScore"-->
<!--        android:textSize="40sp"-->
<!--        app:cornerRadius="20dp"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/btnplay"-->
<!--        app:layout_constraintHorizontal_bias="0.383"-->
<!--        app:layout_constraintStart_toStartOf="@+id/btnplay"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/btnplay" />-->

</androidx.constraintlayout.widget.ConstraintLayout>